# Fresponze

./: .gitignore  .gitmodules  0311fdc3.4bfcee90.js  0311fdc3.df9c9977.js  031f2c2f.30c6c624.js  031f2c2f.ca92c43a.js  065cad4d.2458f69e.js  065cad4d.772cd2fb.js  1.7b00a96f.js  157db0d2.a32df1a5.js  157db0d2.e1cd03b0.js  17896441.5beb01db.js  2.c00082ed.js  225b4c69.1879393f.js  225b4c69.43728eb7.js  26e9809d.4e9574a2.js  26e9809d.94cee8c6.js  2c42fd50.50081b94.js  2c42fd50.820c4c93.js  38.e8a3212c.js  39.1bc38514.js  3c84a6f0.33ed2b15.js  3c84a6f0.357b9b25.js  404.html  45acc928.4d977e4c.js  45acc928.b6dc703c.js  45b69b18.b323c2d6.js  45b69b18.cbafc571.js  46cd5b1b.4764164a.js  46cd5b1b.bc523a53.js  4bcd596d.0fdcb9f4.js  4bcd596d.f39caa14.js  54f9a137.b813d708.js  54f9a137.ce96497b.js  55212dca.5c8e9cba.js  55212dca.8ad930b0.js  6005a19e.11451622.js  6005a19e.51ea3331.js  6048f1e8.3957e3df.js  6048f1e8.9c759552.js  (+42 more)
docs/: index.html
docs/api1/: index.html
docs/api_overview/: index.html
docs/doc2/: index.html
docs/doc3/: index.html
docs/fresponze_hardware/: index.html
docs/fresponze_hardware_close/: index.html
docs/fresponze_hardware_enumerate/: index.html
docs/fresponze_hardware_getdeviceformat/: index.html
docs/fresponze_hardware_getdevicescount/: index.html
docs/fresponze_hardware_getdeviceslist/: index.html
docs/fresponze_hardware_getendpointinfo/: index.html
docs/fresponze_hardware_getrawptr/: index.html
docs/fresponze_hardware_getvolume/: index.html
docs/fresponze_hardware_open_default/: index.html
docs/fresponze_hardware_open_idx/: index.html
docs/fresponze_hardware_open_uuid/: index.html
docs/fresponze_hardware_restart_default/: index.html
docs/fresponze_hardware_restart_idx/: index.html
docs/fresponze_hardware_restart_uuid/: index.html
docs/fresponze_hardware_setvolume/: index.html
docs/fresponze_hardware_start/: index.html
docs/fresponze_hardware_stop/: index.html
docs/fresponze_resampler/: index.html
docs/fresponze_resampler_destroy/: index.html
docs/fresponze_resampler_initialize/: index.html
docs/fresponze_resampler_resample/: index.html
docs/fresponze_resampler_resampledouble/: index.html
docs/fresponze_resampler_reset/: index.html
docs/mdx/: index.html
examples/custom_callback/: custom_callback.cpp  imgui.ini
examples/device_managment/: device_managment.cpp
include/: Fresponze.h  FresponzeConfig.h  FresponzeEffect.h  FresponzeEmitter.h  FresponzeEndpoint.h  FresponzeHardware.h  FresponzeMasterEmitter.h  FresponzeMixer.h  FresponzeOpusFile.h  FresponzeResampler.h  FresponzeResonanceEmitter.h  FresponzeTypes.h
src/: FresponzeAdvancedMixer.cpp  FresponzeEmitter.cpp  FresponzeFabric.cpp  FresponzeMasterEmitter.cpp  FresponzeOpusFile.cpp  FresponzeResonanceEmitter.cpp  FresponzeWavFile.cpp
src/new_render/: FresponzeFuriousMixer.cpp  FresponzeFuriousMixer.h
src/unix/: FresponzeAlsa.h  FresponzeAlsaEndpoint.cpp  FresponzeAlsaEndpoint.h  FresponzeAlsaEnumerator.cpp  FresponzeAlsaEnumerator.h  FresponzeAlsaHardware.h  FresponzeMemoryLinux.cpp
src/windows/: FresponzeWasapi.h  FresponzeWasapiEndpoint.cpp  FresponzeWasapiEndpoint.h  FresponzeWasapiEnumerator.cpp  FresponzeWasapiHardware.h  FresponzeWasapiNotification.h  FresponzeWasapiSpatialEndpoint.cpp  FresponzeWindows.cpp  FresponzeXAudio2Endpoint.cpp  FresponzeXAudio2Endpoint.h
